--- a/result/root/site/_layout.tt
+++ b/result/root/site/_layout.tt
@@ -1,17 +1,21 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		[% INCLUDE 'site/shared/_head.tt' %]
-		<!-- import _head from Views/Shared -->
-	</head>
-	<body>
-		[% INCLUDE 'site/shared/_header.tt' %]
-		<!--import _header from Views/Shared-->
-		[% INCLUDE 'site/shared/_menu.tt' %]
-		<!--import _menu from Views/Shared-->
-		[% content %]
-		<!--Content page-->
-		[% INCLUDE 'site/shared/_footer.tt' %]
-		<!--import _footer from Views/Shared-->
-	</body>
+    <head>
+        [% INCLUDE 'site/shared/_head.tt' %]
+        <!-- import _head from Views/Shared -->
+    </head>
+    <body>
+        <!-- CORE JQUERY SCRIPTS -->
+        <script src="assets/js/jquery-1.11.1.js"></script>
+        <!-- BOOTSTRAP SCRIPTS  -->
+        <script src="assets/js/bootstrap.js"></script>
+        [% INCLUDE 'site/shared/_header.tt' %]
+        <!--import _header from Views/Shared-->
+        [% INCLUDE 'site/shared/_menu.tt' %]
+        <!--import _menu from Views/Shared-->
+        [% content %]
+        <!--Content page-->
+        [% INCLUDE 'site/shared/_footer.tt' %]
+        <!--import _footer from Views/Shared-->
+    </body>
 </html>
