--- a/result/root/site/searchDatabase/index.tt
+++ b/result/root/site/searchDatabase/index.tt
@@ -1,28 +1,34 @@
 <div class="content-wrapper">
     <div class="container">
-    	[% INCLUDE 'site/searchDatabase/_forms.tt' %]
-	</div>
+        [% INCLUDE 'site/searchDatabase/_forms.tt' %]
+    </div>
 </div>
 <script>
-	$("#parentCollapseOne").click(function()
-	{
-		$("#parentCollapseOne").removeClass("panel-default");
-		$("#parentCollapseTwo").removeClass("panel-primary");
-		$("#parentCollapseThree").removeClass("panel-primary");
-		$("#parentCollapseOne").addClass("panel-primary");
-	});
-	$("#parentCollapseTwo").click(function()
-	{
-		$("#parentCollapseTwo").removeClass("panel-default");
-		$("#parentCollapseOne").removeClass("panel-primary");
-		$("#parentCollapseThree").removeClass("panel-primary");
-		$("#parentCollapseTwo").addClass("panel-primary");
-	});
-	$("#parentCollapseThree").click(function()
-	{
-		$("#parentCollapseThree").removeClass("panel-default");
-		$("#parentCollapseTwo").removeClass("panel-primary");
-		$("#parentCollapseOne").removeClass("panel-primary");
-		$("#parentCollapseThree").addClass("panel-primary");
-	});
+    $("#parentCollapseOne").click(function ()
+    {
+        $("#parentCollapseOne").removeClass("panel-default");
+        $("#parentCollapseTwo").removeClass("panel-primary");
+        $("#parentCollapseThree").removeClass("panel-primary");
+        $("#parentCollapseOne").addClass("panel-primary");
+        $("#parentCollapseTwo").addClass("panel-default");
+        $("#parentCollapseThree").addClass("panel-default");
+    });
+    $("#parentCollapseTwo").click(function ()
+    {
+        $("#parentCollapseTwo").removeClass("panel-default");
+        $("#parentCollapseOne").removeClass("panel-primary");
+        $("#parentCollapseThree").removeClass("panel-primary");
+        $("#parentCollapseTwo").addClass("panel-primary");
+        $("#parentCollapseOne").addClass("panel-default");
+        $("#parentCollapseThree").addClass("panel-default");
+    });
+    $("#parentCollapseThree").click(function ()
+    {
+        $("#parentCollapseThree").removeClass("panel-default");
+        $("#parentCollapseTwo").removeClass("panel-primary");
+        $("#parentCollapseOne").removeClass("panel-primary");
+        $("#parentCollapseThree").addClass("panel-primary");
+        $("#parentCollapseOne").addClass("panel-default");
+        $("#parentCollapseTwo").addClass("panel-default");
+    });
 </script>
