--- a/result/root/site/shared/_footer.tt
+++ b/result/root/site/shared/_footer.tt
@@ -2,20 +2,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            	[% FOREACH text IN texts %]
-            		[% IF text.tag.search('footer') %]
-	        			<a href="[% c.uri_for(text.details) %]">[% text.value %]</a>
-		        	[% END %]
-            	[% END %]
-                
+                [% FOREACH text IN texts %]
+                    [% IF text.tag.search('footer') %]
+                        <a href="[% c.uri_for(text.details) %]">[% text.value %]</a>
+                    [% END %]
+                [% END %]
+
             </div>
 
         </div>
     </div>
 </footer>
-<!-- FOOTER SECTION END-->
-<!-- JAVASCRIPT AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
-<!-- CORE JQUERY SCRIPTS -->
+<!-- FOOTER SECTION END
+ JAVASCRIPT AT THE BOTTOM TO REDUCE THE LOADING TIME  
+ CORE JQUERY SCRIPTS 
 <script src="assets/js/jquery-1.11.1.js"></script>
-<!-- BOOTSTRAP SCRIPTS  -->
-<script src="assets/js/bootstrap.js"></script>
+ BOOTSTRAP SCRIPTS  
+<script src="assets/js/bootstrap.js"></script>-->
