--- a/result/root/site/shared/_header.tt
+++ b/result/root/site/shared/_header.tt
@@ -2,9 +2,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <strong>Email: </strong>wendelhime@gmail.com
-                &nbsp;&nbsp;
-                <strong>Support: </strong>+55(13) 991929997
+                [% FOREACH text IN texts %]
+                    [% IF text.tag.search('header') %]
+                        [% IF !(text.tag.search('value')) %]
+                            <strong>[% text.value %]</strong>
+                        [% ELSE %]
+                            [% text.value %]
+                            &nbsp;&nbsp;
+                        [% END %]
+                    [% END %]
+                [% END %]
             </div>
 
         </div>
