--- a/result/root/site/shared/_footer.tt
+++ b/result/root/site/shared/_footer.tt
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 [% FOREACH text IN texts %]
-                    [% IF text.tag.search('footer') %]
+                    [% IF text.tag == 'footer' %]
                         <a href="[% c.uri_for(text.details) %]">[% text.value %]</a>
                     [% END %]
                 [% END %]
