--- a/result/root/site/home/_panelInformation.tt
+++ b/result/root/site/home/_panelInformation.tt
@@ -5,14 +5,14 @@
                 <div class="panel panel-info">
                     <div class="panel-heading">
                         [% FOREACH text IN texts %]
-                            [% IF text.tag.search('panel-home') && !text.tag.search('value') %]
+                            [% IF text.tag.search('home') && !text.tag.search('value') %]
                                 [% text.value %]
                             [% END %]
                         [% END %]
                     </div>
                     <div class="panel-body">
                         [% FOREACH text IN texts %]
-                            [% IF text.tag.search('panel-home-value')%]
+                            [% IF text.tag.search('home-value')%]
                                 [% text.value %]
                             [% END %]
                         [% END %]
