Alterações para pesquisa de gene por descrição, ainda especificar termos

--- a/report_html_db/html_dir/root/html_dir/search-database/result.tt
+++ b/report_html_db/html_dir/root/html_dir/search-database/result.tt
@@ -3,7 +3,7 @@
     <div class="container">
     	[% FOREACH result IN searchResult %]
 			<br />
-			[% result.feature_id %] = [% result.name %]
+			[% result.feature_id %] = [% result.name %] && [% result.uniquename %] 
 			<br />
     	[% END %]
     </div>
