--- a/report_html_db/html_dir/root/assets/css/style.css
+++ b/report_html_db/html_dir/root/assets/css/style.css
@@ -26,6 +26,10 @@ body {
     line-height: 30px;
 }
 
+a {
+	text-decoration: none !important;
+}
+
 .set-radius-zero {
     border-radius: 0px;
     -moz-border-radius: 0px;
