--- a/report_html_db/html_dir/root/html_dir/search-database/result.tt
+++ b/report_html_db/html_dir/root/html_dir/search-database/result.tt
@@ -2,9 +2,17 @@
 <div class="content-wrapper">
     <div class="container">
     	[% FOREACH result IN searchResult %]
-			<br />
-			[% result.feature_id %] = [% result.name %] && [% result.uniquename %] 
-			<br />
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panel-title">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#[% result.feature_id %]">[% result.name %] - [% result.uniquename %]</a>
+					</div>
+				</div>
+				<div id="[% result.feature_id %]" class="panel-collapse collapse">
+					<div class="panel-body">
+					</div>
+				</div>
+			</div>
     	[% END %]
     </div>
 </div>
